Contact fixed on mobile and desktop

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,7 +1,7 @@
 .contact{
-    margin-top: 5.5em;
-    margin-left: 2em;
     font-weight: 400;
+    width: 85%;
+    margin: 0 auto;
     &__left{
         &__title{
             font-family: "Raleway", sans-serif;
@@ -16,21 +16,21 @@
             margin-bottom: 2em;
         }
         &__container{
+            margin-bottom: 3.3em;
             &__info{
-                position: relative;
+                margin-bottom: .9em;
                 &__image{
-                    display: inline;
+                    display: inline-block;
+                    vertical-align: middle;
                 }
                 &__text{
-                    display: inline;
+                    display: inline-block;
+                    vertical-align: middle;
                     font-family: "Open Sans", sans-serif;
                     font-weight: 600;
                     font-size: 1rem;
                     line-height: 1.375rem;
                     color: #A5A5A5;
-                    position: absolute;
-                    top: .1em;
-                    left: 2.2em;
                 }
             }
         }
@@ -39,22 +39,19 @@
         &__details{
             margin-top: 2.8em;
             &__label{
-                display: block;
                 font-family: "Open Sans", sans-serif;
                 font-weight: 600;
                 font-size: 0.6875rem;
                 line-height: 0.875rem;
                 color: #08A6E4;
-                letter-spacing: 0.1875rem;
-                margin-bottom: 2em;
+                letter-spacing: 0.1875reM;
             }
             &__input{
-                display: block;
-                width: 23em;
+                width: 100%;
                 border: none;
                 border-bottom: 0.0625rem solid #95989A;
+                margin-top: 2em;
                 margin-bottom: 3.5em;
-    
             }
             &__input:focus {
                 outline: none;
@@ -62,45 +59,18 @@
         }
         &__terms-conditions{
             position: relative;
-            margin-bottom: 20.5em;
-            &__label{
-                // position: absolute;
-                // width: 2em;
-                // height: 2em;
-                // border: 0.0625rem #95989A  solid;
-                // border-radius: 0.25rem;
-                // accent-color: #FFFFFF;
-                &__checkbox{
-                    // display: none;
-                    position: absolute;
-                    width: 2em;
-                    height: 2em;
-                    border: 0.0625rem #95989A  solid;
-                    border-radius: 0.25rem;
-                    accent-color: #FFFFFF;
-                }
-                // &__span{
-                //     display: inline-block;
-                //     position: absolute;
-                //     top: 0;
-                //     left: 0;
-                //     width: 24px;
-                //     height: 24px;
-                //     border: 0.0625rem #95989A  solid;
-                //     border-radius: 0.25rem;
-                // }
-                // &__checkbox:checked + &__span::before{
-                //     content: url('../img/Checkmark.png');
-                //     display: inline-block;
-                //     width: 100%;
-                //     text-align: ;
-                //     color: #08A6E4;
-                // }
+            display: block;
+            width: 100%;
+            &__checkbox{
+                position: absolute;
+                display: inline-block;
+                width: 2em;
+                height: 2em;
             }
             &__text{
-                position: absolute;
-                left: 3em;
-                max-width: 23em;
+                width: 90%;
+                margin-left: 3em;
+                display: block;
                 font-family: "Open Sans", sans-serif;
                 font-weight: 400;
                 font-size: 0.75rem;
@@ -108,9 +78,6 @@
                 color: #707070;
             }
             &__button{
-                position: absolute;
-                bottom: -18em;
-                left: 9em;
                 font-family: "Open Sans", sans-serif;
                 font-weight: 700;
                 font-size: 0.8125rem;
@@ -121,74 +88,34 @@
                 border: none;
                 border-radius: 2.1875rem;
                 background-color: #08A6E4;
-                box-shadow: #07ACE64A 5px 10px 14px 0px ;
+                box-shadow: #07ACE64A 5px 10px 14px 0px;
+                display: block;
+                margin: 3em 0 3em auto;
             }
         }
     }
     @media only screen and (min-width: 1000px) {
-        margin-top: 7.5em;
+        margin: 6em auto 0 auto;
+        width: 70%;
         display: flex;
         justify-content: center;
-        gap: 4em;
         &__left{
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
+            width: 45%;
+            margin: 0;
             &__title{
-                padding-bottom: .4em;
+                margin-bottom: .4em;
             }
             &__container{
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                margin-right: 1em;
                 &__info{
-                    display: flex; 
-                    flex-direction: row; 
-                    align-items: center;
-                    margin-right: 1em;
-                    &__image{
-                        margin-right: .8em;
-                    }
-                    &__text{
-                        position: static;
-                        display: flex;
-                        align-items: center;
-                    }
+                    margin-bottom: 0;
+                    display: inline;
                 }
             }
         }
         &__right{
-            position: static;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            width: 27%;
+            width: 55%;
             &__details{
                 margin-top: 0;
-                &__input{
-                    width: 100%;
-                    max-width: 100%; 
-                    margin-bottom: 2vw;
-                }
-            }
-            &__terms-conditions{
-                display: flex;
-                flex-direction: column;
-                padding: 0 1em 1em 0;
-                margin-bottom: 9.5em;
-                position: relative;
-                &__text{
-                    display: inline-block;
-                    position: static;
-                    max-width: 100%;
-                    margin-left: 3em;
-                }
-                &__button{
-                    left: auto;
-                    right: 1em;
-                    bottom: -5em;
-                }
             }
         }
     }
