--- a/sass/styles.css
+++ b/sass/styles.css
@@ -562,9 +562,9 @@ html, body {
 }
 
 .contact {
-  margin-top: 5.5em;
-  margin-left: 2em;
   font-weight: 400;
+  width: 85%;
+  margin: 0 auto;
 }
 .contact__left__title {
   font-family: "Raleway", sans-serif;
@@ -578,41 +578,41 @@ html, body {
   margin-top: 0.3em;
   margin-bottom: 2em;
 }
+.contact__left__container {
+  margin-bottom: 3.3em;
+}
 .contact__left__container__info {
-  position: relative;
+  margin-bottom: 0.9em;
 }
 .contact__left__container__info__image {
-  display: inline;
+  display: inline-block;
+  vertical-align: middle;
 }
 .contact__left__container__info__text {
-  display: inline;
+  display: inline-block;
+  vertical-align: middle;
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
   font-size: 1rem;
   line-height: 1.375rem;
   color: #A5A5A5;
-  position: absolute;
-  top: 0.1em;
-  left: 2.2em;
 }
 .contact__right__details {
   margin-top: 2.8em;
 }
 .contact__right__details__label {
-  display: block;
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
   font-size: 0.6875rem;
   line-height: 0.875rem;
   color: #08A6E4;
-  letter-spacing: 0.1875rem;
-  margin-bottom: 2em;
+  letter-spacing: 0.1875reM;
 }
 .contact__right__details__input {
-  display: block;
-  width: 23em;
+  width: 100%;
   border: none;
   border-bottom: 0.0625rem solid #95989A;
+  margin-top: 2em;
   margin-bottom: 3.5em;
 }
 .contact__right__details__input:focus {
@@ -620,20 +620,19 @@ html, body {
 }
 .contact__right__terms-conditions {
   position: relative;
-  margin-bottom: 20.5em;
+  display: block;
+  width: 100%;
 }
-.contact__right__terms-conditions__label__checkbox {
+.contact__right__terms-conditions__checkbox {
   position: absolute;
+  display: inline-block;
   width: 2em;
   height: 2em;
-  border: 0.0625rem #95989A solid;
-  border-radius: 0.25rem;
-  accent-color: #FFFFFF;
 }
 .contact__right__terms-conditions__text {
-  position: absolute;
-  left: 3em;
-  max-width: 23em;
+  width: 90%;
+  margin-left: 3em;
+  display: block;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 0.75rem;
@@ -641,9 +640,6 @@ html, body {
   color: #707070;
 }
 .contact__right__terms-conditions__button {
-  position: absolute;
-  bottom: -18em;
-  left: 9em;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
   font-size: 0.8125rem;
@@ -655,74 +651,32 @@ html, body {
   border-radius: 2.1875rem;
   background-color: #08A6E4;
   box-shadow: rgba(7, 172, 230, 0.2901960784) 5px 10px 14px 0px;
+  display: block;
+  margin: 3em 0 3em auto;
 }
 @media only screen and (min-width: 1000px) {
   .contact {
-    margin-top: 7.5em;
+    margin: 6em auto 0 auto;
+    width: 70%;
     display: flex;
     justify-content: center;
-    gap: 4em;
   }
   .contact__left {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    width: 45%;
+    margin: 0;
   }
   .contact__left__title {
-    padding-bottom: 0.4em;
-  }
-  .contact__left__container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-right: 1em;
+    margin-bottom: 0.4em;
   }
   .contact__left__container__info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-right: 1em;
-  }
-  .contact__left__container__info__image {
-    margin-right: 0.8em;
-  }
-  .contact__left__container__info__text {
-    position: static;
-    display: flex;
-    align-items: center;
+    margin-bottom: 0;
+    display: inline;
   }
   .contact__right {
-    position: static;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 27%;
+    width: 55%;
   }
   .contact__right__details {
     margin-top: 0;
-  }
-  .contact__right__details__input {
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 2vw;
-  }
-  .contact__right__terms-conditions {
-    display: flex;
-    flex-direction: column;
-    padding: 0 1em 1em 0;
-    margin-bottom: 9.5em;
-    position: relative;
-  }
-  .contact__right__terms-conditions__text {
-    display: inline-block;
-    position: static;
-    max-width: 100%;
-    margin-left: 3em;
-  }
-  .contact__right__terms-conditions__button {
-    left: auto;
-    right: 1em;
-    bottom: -5em;
   }
 }
 
